@@ -1,5 +1,8 @@
-$Id: Changelog.txt,v 1.226 2016/12/16 08:57:19 nanard Exp $
+$Id: Changelog.txt,v 1.227 2017/05/09 10:04:56 nanard Exp $
 miniUPnP client Changelog.
+
+2017/05/05:
+  Fix CVE-2017-8798   Thanks to tin/Team OSTStrom
 
 2016/11/11:
   check strlen before memcmp in XML parsing portlistingparse.c
